--- a/反查.md
+++ b/反查.md
@@ -1,6 +1,6 @@
 # 反查
 [拼音反查等](http://tieba.baidu.com/p/5764130922)
-
+[shewer/librime-lua-script](https://github.com/shewer/librime-lua-script)
 ## 步骤
 ### 定义反查功能使用的`词库名称`
 [[soft/rime/hy.schema.yaml.md#dependencies]]
@@ -17,3 +17,8 @@ reverse_lookup:
 ```
 ### [[recognizer#reverse_lookup]]
 以上四项设定无误，在小狼毫输入法设定中同时启用你的输入方案和反查输入方案，就可以在你的输入方案中使用反查功能了！（一个启用反查的输入方案正确启用后，会在【用户名／AppData／Roaming／Rime／build】文件夹下生成两个以输入方案名称开头的文件，两个以词库名开头的文件，这四个文件没有生成或大小有问题，理论上讲该输入方案不会正常工作。同时启用两个输入方案，这个文件夹下应该会生成八个与输入方案相关文件和另外两个文
+
+## 其他
+- [ ] [[soft/rime/filters#reverse_lookup_filter]]如何使用
+- [ ] 不在五笔里的词组，不会显示反查的五笔编码，比如`你行`
+- [ ] 是否能和其他功能合并？比如临时生僻字。
