--- a/程序文件夹.md
+++ b/程序文件夹.md
@@ -27,4 +27,9 @@
 ### opencc
 滤镜组件
 
+## temp
+`rime.weasel.xxx.log.ERROR`
 
+`E1112 16:02:48.409070 35312 deployment_tasks.cc:667] boost::filesystem::remove: 另一个程序正在使用此文件，进程无法访问。: "C:\Users\ADMINI~1\AppData\Local\Temp\rime.weasel.HUANGYE.Administrator.log.ERROR.20221103-085647.10560"
+`
+- [ ] 文件无法删除，怎么处理
