--- a/个人文件夹.md
+++ b/个人文件夹.md
@@ -22,16 +22,16 @@
 - `hy.userdb.snapshot` 同步文件夹
 
 ### opencc
-[[soft/rime/滤镜]]
+[[滤镜]]
 
 ### lua
 [lua](https://github.com/LEOYoon-Tsaw/Rime_collections/blob/master/Rime_description.md#七lua)
 ## 文件
 
 ### .custom.yaml
-- [[soft/rime/default.custom.yaml|default.custom.yaml]]
-- [[soft/rime/weasel.custom.yaml|weasel.custom.yaml]]
-- [[soft/rime/hy.dict.yaml]]
+- [[default.custom.yaml|default.custom.yaml]]
+- [[weasel.custom.yaml|weasel.custom.yaml]]
+- [[hy.dict.yaml]]
 
 ### 自带
 #### installation.yaml
