--- a/代码段.md
+++ b/代码段.md
@@ -1,2 +1,2 @@
 
-[[#输入码]]由[[soft/rime/segmentors|segmentors]]拆成多个代码段，由[[soft/rime/translators|translators]]翻译
+[[#输入码]]由[[segmentors]]拆成多个代码段，由[[translators]]翻译
