--- a/候选框.md
+++ b/候选框.md
@@ -2,13 +2,13 @@
 ## 隐藏候选框
 
 ## 用户词典
-[[soft/rime/translators#enable_user_dict]]及下面相关设置
+[[translators#enable_user_dict]]及下面相关设置
 ## 顺序
-1. [[soft/rime/translators#initial_quality]]
+1. [[translators#initial_quality]]
 ## 单结果自动上屏
-[[soft/rime/speller#auto_select]]
+[[speller#auto_select]]
 ## 显示补全的字
 ## 显示提示码
-[[soft/rime/滤镜]]
+[[滤镜]]
 
 ## 太极符号表示字库中不存在
