--- a/功能索引.md
+++ b/功能索引.md
@@ -1,39 +1,39 @@
 ## filter
-[[soft/rime/filter]]
+[[filter]]
 
 ## session
 - [ ] 下次打开输入法时，哪些配置会记住，哪些会初始化
 ### 会重置的配置
-- [[soft/rime/switches#reset]]
+- [[switches#reset]]
 -
 ### 会记忆的配置
 
 ## 热键
 `Control+Shift+grave`
-- [[soft/rime/程序文件夹#key_bindings.yaml|key_bindings.yaml]]
-- [[soft/rime/processors#key_binder]]
+- [[程序文件夹#key_bindings.yaml|key_bindings.yaml]]
+- [[processors#key_binder]]
 - `,` 在第`2+`页，则返回上一页，否则直接上屏并输出逗号
 
 ## 输入码
 [拼写运算详解](https://github.com/rime/home/wiki/SpellingAlgebra)
 
 ### 显示调整
-[[soft/rime/输入码显示调整]]
+[[输入码显示调整]]
 ### 最长编码
-[[soft/rime/speller#max_code_length]]
+[[speller#max_code_length]]
 
 ## 代码段
-[[soft/rime/代码段]]
+[[代码段]]
 ## 候选框
-[[soft/rime/候选框]]
+[[候选框]]
 
 ## 快捷输入
 
 ## tag
-[[soft/rime/tag]]
+[[tag]]
 
 ## 造词
-- [[soft/rime/translators#enable_encoder|自动造词]]
+- [[translators#enable_encoder|自动造词]]
 
 ## 用户词/生僻字开关
 - [ ] 用户词/生僻字开关
@@ -42,7 +42,7 @@
 - [ ]
 
 ## 反查
-[[soft/rime/反查]]
+[[反查]]
 ## 同步
 1. 第一步打开用户文件夹中的installation.yaml文件，修改sync_dir指向位置（这个位置将是RIME的词典与配置存储的地方）
    另外也可修改`installation_id`为自己喜欢的名称（为字母下划线数字，也可以不修改）
