--- a/滤镜.md
+++ b/滤镜.md
@@ -4,12 +4,12 @@ aliases: OpenCC
 - [在*.dict.yaml文件中添加comment列 · Issue #538 · rime/librime](https://github.com/rime/librime/issues/538)
 - [简繁转换OpenCC](https://github.com/BYVoid/OpenCC)
     - `python` 对应的是 `opencc-python-reimplemented`
-[[soft/rime/translator#comment_format]]
+[[translator#comment_format]]
 - [ ] 对其他滤镜结果进行二次转换
 - [ ] 能否改成精确匹配才显示
 
-> 路径：[[soft/rime/个人文件夹]]\opencc
-> 根据[[soft/rime/候选框]]生成滤镜内容
+> 路径：[[个人文件夹]]\opencc
+> 根据[[候选框]]生成滤镜内容
 > [[附件/rime/同文opencc滤镜制作安装及进阶教程2.0.pdf]]
 ## 说明
 
@@ -48,7 +48,7 @@ ocd→txt: `opencc_dict.exe -i in.ocd -o out.txt -f ocd -t text`
 ### 编码滤镜
 - 在滤镜关键字`编码区`显示，适合`多行`及`排版`的复杂内容：诗词，词典等
 - 通过滤镜转换对应条目的编码，使用正则使编码变形
-- 多个滤镜的相同滤镜关键字内容不会同时显示，会根据 [[soft/rime/filters]] 节点中滤镜顺序显示（下方后执行的会覆盖前面内容），如果有冲突，可以给滤镜设置开关，或让滤镜`关键字`不同
+- 多个滤镜的相同滤镜关键字内容不会同时显示，会根据 [[filters]] 节点中滤镜顺序显示（下方后执行的会覆盖前面内容），如果有冲突，可以给滤镜设置开关，或让滤镜`关键字`不同
 - 缺点
     - 用`&nbsp`代表`空格`，`<br>`代表`换行`
     - 内容直接无法输出，需要用其他方式
@@ -57,9 +57,9 @@ ocd→txt: `opencc_dict.exe -i in.ocd -o out.txt -f ocd -t text`
 
 ## schema设置
 
-- [[#配置文件]]和[[#内容文件]]放入[[soft/rime/个人文件夹#opencc]]
-- [[soft/rime/switches]]添加开关
-- [[soft/rime/filters]]添加 `simplifier@hytips`
+- [[#配置文件]]和[[#内容文件]]放入[[个人文件夹#opencc]]
+- [[switches]]添加开关
+- [[filters]]添加 `simplifier@hytips`
 - 定义hytips的功能
 
 ## 滤镜开关
