--- a/程序文件夹.md
+++ b/程序文件夹.md
@@ -1,7 +1,7 @@
 
 ## 文件
 
-- [[soft/rime/default.yaml]]
+- [[default.yaml]]
 ### weasel.yaml
 > 发行版设定（`操作系统`相关，用得少）
 ### key_bindings.yaml
@@ -20,6 +20,8 @@
 ### WeaselServer.exe
 服务
 
+### rime.dll
+更新访问 [librime-lua](https://github.com/shewer/librime-lua/releases)
 ## 目录
 ### preview
 皮肤
