--- a/自制输入方案.md
+++ b/自制输入方案.md
@@ -1,6 +1,6 @@
 > 方案名约定为<font color=red>hy</font>
 > 以源文件为基础（[[#import_preset]]），[[#patch]]覆盖重新定义的选项（`custom`文件才有效）
-- [[soft/rime/patch|patch]]
+- [[patch]]
 
 - [✅✅✅必知必会-创作输入方案](https://github.com/rime/home/wiki/RimeWithSchemata)
 - [定制指南](https://github.com/rime/home/wiki/CustomizationGuide)
@@ -15,11 +15,11 @@
 
 - [深蓝词库转换工具](https://github.com/studyzy/imewlconverter/releases)
 
-## [[soft/rime/hy.schema.yaml]]
+## [[hy.schema.yaml]]
 
 ## import_preset
 > 由外部文件导入，实现模块化配置：可对各模块新建 `*.custom.yaml` 文件，每个文件里`patch:`即可实现
-> 比如[[#key_binder]]设置`import_preset: default`，会从[[soft/rime/程序文件夹#default.yaml|default.yaml]]导入对应的配置
+> 比如[[#key_binder]]设置`import_preset: default`，会从[[程序文件夹#default.yaml|default.yaml]]导入对应的配置
 用到此方法的模块有 recognizer、key_binder、punctuator
 
 ### import_preset和__include的区别
