--- a/功能索引.md
+++ b/功能索引.md
@@ -5,11 +5,12 @@
 - [ ] 下次打开输入法时，哪些配置会记住，哪些会初始化
 ### 会重置的配置
 - [[switches#reset]]
--
 ### 会记忆的配置
 
 ## 热键
-`Control+Shift+grave`
+### 切换输入方案
+[[default.custom.yaml#hotkeys]]
+### 切换功能
 - [[程序文件夹#key_bindings.yaml|key_bindings.yaml]]
 - [[processors#key_binder]]
 - `,` 在第`2+`页，则返回上一页，否则直接上屏并输出逗号
