--- a/反查.md
+++ b/反查.md
@@ -1,22 +1,30 @@
-# 反查
+> 反查可能会有`简繁体`转换问题，更推荐把词库直接转成自己用的简体或繁体，这样使用过程中就永久少一个转换环节。偶尔的转换，用[[switches]]实现即可
 [拼音反查等](http://tieba.baidu.com/p/5764130922)
-[shewer/librime-lua-script](https://github.com/shewer/librime-lua-script)
-## 步骤
-### 定义反查功能使用的`词库名称`
-[[hy.schema.yaml.md#dependencies]]
-### 开启反查功能
-[[translators.md#reverse_lookup_translator]]
-### reverse_lookup
+[✅✅✅linux 拼音输出繁体_解决rime仓颉拼音反查为繁体的问题 - 腾讯云开发者社区-腾讯云](https://cloud.tencent.com/developer/article/2106365)
+
+[[soft/rime/rime-lua#librime-lua]]
+
+## 旧方式-reverse_lookup_translator
 ```
+schema/dependencies:
+  - terra_pinyin.extended #会生成".reverse.bin"文件
+
+recognizer/patterns/reverse_lookup: "^'[a-z]*$"
+
+translators/reverse_lookup_translator
+
 reverse_lookup:
-  dictionary: ***
-  prefix: "`" #要和 recognizer／patterns／reverse_lookup 正则一致
-  tags:  ／／--［自定义多项反查功能时的区分信息］
-  preedit_format:  ／／--［反查功能反查编码显示规则］
-  tips:
+  dictionary: terra_pinyin_extended
+  prefix: "'" #和patterns定义的符号一致
+  tips: 【拼音反查】
+  preedit_format:
+    - xform/([nl])v/$1ü/
+    - xform/([nl])ue/$1üe/
+    - xform/([jqxy])v/$1u/
+
 ```
-### [[recognizer#reverse_lookup]]
-以上四项设定无误，在小狼毫输入法设定中同时启用你的输入方案和反查输入方案，就可以在你的输入方案中使用反查功能了！（一个启用反查的输入方案正确启用后，会在【用户名／AppData／Roaming／Rime／build】文件夹下生成两个以输入方案名称开头的文件，两个以词库名开头的文件，这四个文件没有生成或大小有问题，理论上讲该输入方案不会正常工作。同时启用两个输入方案，这个文件夹下应该会生成八个与输入方案相关文件和另外两个文
+
+## 新方式-reverse_lookup_filter
 
 ## 其他
 - [ ] [[filters#reverse_lookup_filter]]如何使用
