--- a/滤镜.md
+++ b/滤镜.md
@@ -1,19 +1,19 @@
 ---
 aliases: OpenCC
 ---
+
 - [在*.dict.yaml文件中添加comment列 · Issue #538 · rime/librime](https://github.com/rime/librime/issues/538)
 - [简繁转换OpenCC](https://github.com/BYVoid/OpenCC)
     - `python` 对应的是 `opencc-python-reimplemented`
 [[translator#comment_format]]
 - [ ] 对其他滤镜结果进行二次转换
-- [ ] 能否改成精确匹配才显示
+- [ ] 能否改成精确匹配才显示，否则`a`→`我`后，`app`→`我pp`
 
-> 路径：[[个人文件夹]]\opencc
+> 路径：[[用户文件夹]]`\opencc`
 > 根据[[候选框]]生成滤镜内容
 > [[附件/rime/同文opencc滤镜制作安装及进阶教程2.0.pdf]]
+
 ## 说明
-
-
 ### json
 > 配置文件[[#普通滤镜]]和[[#编码滤镜]]通用
 > 可以读取`ocd`或`txt`文件，通过 `dict.type` 值区分
@@ -38,6 +38,7 @@ aliases: OpenCC
 #### ocd
 txt→ocd: `opencc_dict.exe -i in.txt -o out.ocd`
 ocd→txt: `opencc_dict.exe -i in.ocd -o out.txt -f ocd -t text`
+
 ## 分类
 
 ### 普通滤镜
@@ -57,7 +58,7 @@ ocd→txt: `opencc_dict.exe -i in.ocd -o out.txt -f ocd -t text`
 
 ## schema设置
 
-- [[#配置文件]]和[[#内容文件]]放入[[个人文件夹#opencc]]
+- [[#配置文件]]和[[#内容文件]]放入[[用户文件夹#opencc]]
 - [[switches]]添加开关
 - [[filters]]添加 `simplifier@hytips`
 - 定义hytips的功能
