--- a/程序文件夹.md
+++ b/程序文件夹.md
@@ -16,9 +16,10 @@
 输入方案配套的词典源文件
 
 ### WeaselDeployer.exe
-重新部署
+> 重新安装输入方案，列表依赖`schema.yaml`文件，
+重新部署，命令行`WeaselDeployer.exe /deploy`
 ### WeaselServer.exe
-服务
+服务，重新运行后才能删除`%TEMP%`下的文件
 
 ### rime.dll
 更新访问 [librime-lua](https://github.com/shewer/librime-lua/releases)
