--- a/自制输入方案.md
+++ b/自制输入方案.md
@@ -7,11 +7,10 @@
 - [Schema.yaml](https://github.com/LEOYoon-Tsaw/Rime_collections/blob/master/Rime_description.md)
 
 - [输入方案下载](https://github.com/rime/plum#packages)
-[中州韵98五笔功能简介 | 五笔小筑 (gitee.io)](https://wubi98.gitee.io/2019/05/22/2019-05-22-007.98wb)
+- [雪齋-LEOYoon-Tsaw/Cangjie6](https://github.com/LEOYoon-Tsaw/Cangjie6/blob/master/My_cangjie6.schema.yaml)
 - [雾凇拼音，我的 Rime 配置及新手指引](https://dvel.me/posts/my-rime)
-- [98五笔资源库](http://98wb.ysepan.com)
-- [yanhuacuo/98wubi-tables: 98五笔基础码表](https://github.com/yanhuacuo/98wubi-tables)
 - [我的 Rime 配置 2022 - Dvel](https://dvel.me/posts/my-rime-setting-2022)
+- [特色功能-开源好用的98五笔输入法-基于Rime的高效五笔输入法](http://www.98wubi.com/tese.html)
 
 - [深蓝词库转换工具](https://github.com/studyzy/imewlconverter/releases)
 
