--- a/候选框.md
+++ b/候选框.md
@@ -1,14 +1,36 @@
-# 候选框
+注意：内容太多会崩溃，特别是[[滤镜]]是对每个字进行处理
 ## 隐藏候选框
 
 ## 用户词典
 [[translators#enable_user_dict]]及下面相关设置
 ## 顺序
-1. [[translators#initial_quality]]
+[[translator#initial_quality]]
 ## 单结果自动上屏
 [[speller#auto_select]]
-## 显示补全的字
-## 显示提示码
-[[滤镜]]
+- 临时方案里，以上方法无效，因为[[recognizer#patterns]]优先级高，要用[[rime-lua]]
 
-## 太极符号表示字库中不存在
+## 临时其他方案
+> 一般用前缀符来调用，如果方案多，建议用`[A-Z]`当前缀
+1. 定义 [[recognizer#patterns]]
+2. 定义 [[segmentors#affix_segmentor]]排除前缀
+3. 定义 [[translators#table_translator]]转成候选项
+4. 如果要提示码，把 `tag` 添加到对应[[reverse_lookup_filter]]的 `tags` 下
+
+## 提示码
+> ✅✅✅这是rime很核心的特性，目前反查用在这个功能应该是副产品，期待开发专门实现此功能的组件
+> 如果每个字都要处理用[[滤镜]]，完整匹配用[[反查]]，期待出新方式
+
+### 上屏
+1. windows可以`ctrl-shift+enter`上屏
+2. 同文：`{click: Return, long_click: CommitComment}`
+
+### 类型
+#### 太极符号
+表示字库中不存在，一般在开启[[translator#enable_sentence]]后出现
+[# 关于comment中的 太极符号☯️ #1133](https://github.com/rime/home/issues/1133)
+
+#### 全角/半角
+- [[punctuator]]特有的，系统自带
+
+## 词组下面还显示单字
+拼音特性，可能是[[translators#script_translator]]
