--- a/功能索引.md
+++ b/功能索引.md
@@ -1,5 +1,4 @@
 ## filter
-[[filter]]
 
 ## session
 - [ ] 下次打开输入法时，哪些配置会记住，哪些会初始化
@@ -11,39 +10,22 @@
 ### 切换输入方案
 [[default.custom.yaml#hotkeys]]
 ### 切换功能
-- [[程序文件夹#key_bindings.yaml|key_bindings.yaml]]
+- [[共享文件夹#key_bindings.yaml|key_bindings.yaml]]
 - [[processors#key_binder]]
 - `,` 在第`2+`页，则返回上一页，否则直接上屏并输出逗号
 
-## 输入码
-[拼写运算详解](https://github.com/rime/home/wiki/SpellingAlgebra)
+## [[输入码]]
+## [[候选框]]
+## [[tag]]
+## [[反查]]
 
-### 显示调整
-[[输入码显示调整]]
-### 最长编码
-[[speller#max_code_length]]
-
-## 代码段
-[[代码段]]
-## 候选框
-[[候选框]]
-
-## 快捷输入
-
-## tag
-[[tag]]
-
+## 万能键
+`z`>1时，当五笔的万能键，需要rime先支持模糊匹配编码，再用[[speller#algebra]]
 ## 造词
-- [[translators#enable_encoder|自动造词]]
-
-## 用户词/生僻字开关
-- [ ] 用户词/生僻字开关
+- [[translator#enable_encoder|自动造词]]
 
 ## 输入英文
-- [ ]
 
-## 反查
-[[反查]]
 ## 同步
 1. 第一步打开用户文件夹中的installation.yaml文件，修改sync_dir指向位置（这个位置将是RIME的词典与配置存储的地方）
    另外也可修改`installation_id`为自己喜欢的名称（为字母下划线数字，也可以不修改）
