--- a/反查.md
+++ b/反查.md
@@ -1,32 +1,34 @@
+> 反查可以分两步走：
+> 1. 使用 recognizer 临时使用其他输入方案输出内容
+> 2. 在候选项添加comment
 > 反查可能会有`简繁体`转换问题，更推荐把词库直接转成自己用的简体或繁体，这样使用过程中就永久少一个转换环节。偶尔的转换，用[[switches]]实现即可
-[拼音反查等](http://tieba.baidu.com/p/5764130922)
-[✅✅✅linux 拼音输出繁体_解决rime仓颉拼音反查为繁体的问题 - 腾讯云开发者社区-腾讯云](https://cloud.tencent.com/developer/article/2106365)
+- [ ] 有什么方法只需要建一个输入方案就能正查、反查两个功能。
+日常打中文，希望显示英文提示，那么需要一个反查的输入方案，  
+输入临时英文，希望显示中文提示，那么反查的输入方案词库则相反，  
+为此我必须要建两个输入方案吗？本质上是一个输入方案的正查和反查，
+[linux 拼音输出繁体_解决rime仓颉拼音反查为繁体的问题 - 腾讯云开发者社区-腾讯云](https://cloud.tencent.com/developer/article/2106365)
+[cedict词典](https://github.com/enjalot/pinyin)
+[CC-CEDICT download](https://www.mdbg.net/chinese/dictionary?page=cc-cedict)
 
 [[soft/rime/rime-lua#librime-lua]]
 
-## 旧方式-reverse_lookup_translator
-```
-schema/dependencies:
-  - terra_pinyin.extended #会生成".reverse.bin"文件
+## reverse_lookup_filter
+✅✅✅新反查滤镜，以更灵活的方式反查，`rime1.0`后替代 `reverse_lookup_translator`
+> 对于 [[tag]]=`punct`时无效，建议有备注需求的还是放到`abc`里，即词库
 
-recognizer/patterns/reverse_lookup: "^'[a-z]*$"
+参考[[滤镜#simplifier选项]]，但没有 `option_name`、`show_in_comment`、`tips` 选项，那如何切换开关？？
+[reverse_lookup_filter](https://github.com/LEOYoon-Tsaw/Rime_collections/blob/master/Rime_description.md#四reverse_lookup_filter)
+[reverse_lookup_translator 如何转成 reverse_lookup_filter](https://github.com/rime/librime/issues/581)
+> 此属性虽定义在[[translators]]，本质上属于[[filters]]
+可加载多个实例，后接`@+filterName`
+- `reverse_lookup_filter@reverse_lookup`
+- `reverse_lookup_filter@pinyin_lookup`
+- `reverse_lookup_filter@jyutping_lookup`
 
-translators/reverse_lookup_translator
-
-reverse_lookup:
-  dictionary: terra_pinyin_extended
-  prefix: "'" #和patterns定义的符号一致
-  tips: 【拼音反查】
-  preedit_format:
-    - xform/([nl])v/$1ü/
-    - xform/([nl])ue/$1üe/
-    - xform/([jqxy])v/$1u/
-
-```
-
-## 新方式-reverse_lookup_filter
+## reverse_lookup_translator
+❌旧方式
 
 ## 其他
-- [ ] [[filters#reverse_lookup_filter]]如何使用
-- [ ] 不在五笔里的词组，不会显示反查的五笔编码，比如`你行`
-- [ ] 是否能和其他功能合并？比如临时生僻字。
+
+- 不在五笔里的词组，不会显示反查的五笔编码，比如`你行`
+- 可以和能和其他功能合并，比如临时生僻字，见
