--- a/滤镜.md
+++ b/滤镜.md
@@ -1,16 +1,17 @@
 ---
-aliases: OpenCC
+aliases: opencc, simplifier
 ---
-
+- [Rime_description#opencc](https://github.com/LEOYoon-Tsaw/Rime_collections/blob/master/Rime_description.md#五simplifier)
 - [在*.dict.yaml文件中添加comment列 · Issue #538 · rime/librime](https://github.com/rime/librime/issues/538)
 - [简繁转换OpenCC](https://github.com/BYVoid/OpenCC)
     - `python` 对应的是 `opencc-python-reimplemented`
 [[translator#comment_format]]
-- [ ] 对其他滤镜结果进行二次转换
-- [ ] 能否改成精确匹配才显示，否则`a`→`我`后，`app`→`我pp`
+
+特性：对候选项的每个字进行处理，想要完整匹配见[[候选框#提示码]]
+这种特性有时候会不好用，所以一般由[[switches]]控制开关。
+对其他滤镜结果进行二次转换，只要滤镜顺序对，都会依次处理。
 
 > 路径：[[用户文件夹]]`\opencc`
-> 根据[[候选框]]生成滤镜内容
 > [[附件/rime/同文opencc滤镜制作安装及进阶教程2.0.pdf]]
 
 ## 说明
@@ -32,21 +33,24 @@ aliases: OpenCC
 ### 内容文件
 #### txt
 ##### 格式
+> ✅✅✅不要有空行，关键字唯一
 - `关键字\t滤镜内容1 滤镜内容2 ...`
-- [ ] 滤镜内容中间的` `用途
-- 尽量不要有空白行，关键字保持唯一
 #### ocd
+> ✅✅✅注意，小狼毫是`32位`，如果给安卓用，要编译成`64位`，或用`txt`格式（效率较低）
 txt→ocd: `opencc_dict.exe -i in.txt -o out.ocd`
 ocd→txt: `opencc_dict.exe -i in.ocd -o out.txt -f ocd -t text`
 
 ## 分类
 
 ### 普通滤镜
-- 可生成多项，则原内容将排到后面，中间以`空格`分隔
+> ✅✅✅适用于联想，并把联想内容放到[[候选框]]
+- 可生成多项，按原内容将排到后面，中间以`空格`分隔
 - 多个滤镜的相同关键字内容可同时存在
-- 缺点：无法显示空格和回车
+- 缺点：无法显示`空格`和`回车`
+- [ ] 功能很不错，如何定义？？
 
 ### 编码滤镜
+> 适用于多行，需要排版的内容，显示在[[候选框#提示码]]
 - 在滤镜关键字`编码区`显示，适合`多行`及`排版`的复杂内容：诗词，词典等
 - 通过滤镜转换对应条目的编码，使用正则使编码变形
 - 多个滤镜的相同滤镜关键字内容不会同时显示，会根据 [[filters]] 节点中滤镜顺序显示（下方后执行的会覆盖前面内容），如果有冲突，可以给滤镜设置开关，或让滤镜`关键字`不同
@@ -63,8 +67,34 @@ ocd→txt: `opencc_dict.exe -i in.ocd -o out.txt -f ocd -t text`
 - [[filters]]添加 `simplifier@hytips`
 - 定义hytips的功能
 
-## 滤镜开关
-
 ## 上屏
-1. windows可以`ctrl-shift+enter`上屏
-2. 同文：`{click: Return, long_click: CommitComment}`
+[[soft/rime/候选框#上屏]]
+
+## simplifier选项
+
+### option_name
+和 [[switches#name]] 一致
+### opencc_config
+- [ ] 全匹配才替换
+`opencc_config: s2t.json`
+`opencc_config: s2tw.json`
+### tags
+设定此 filter 的作用范围
+`tags: [ pinyin ]` 挂在指定的[[translator]]上
+
+### show_in_comment
+设定是否仅将转换结果显示在备注中，否则和候选框对调位置
+- [ ] 简易滤镜，可以添加到候选项中。
+### overwrite_comment
+是否覆盖之前已有备注
+如果不想覆盖，则只能用普通滤镜，添加到候选项中
+
+### tips
+是否显示转换前的字
+- [ ] 和 [[#show_in_comment]] 的关联？
+`tips: all` ，可填`none`(默认)、`char`(仅单字)、`all`
+### excluded_types
+取消特定范围〔一般为❌`reverse_lookup_translator`〕转化用字
+
+### allow_erase_comment
+是否允许返回空提示码，默认`false`
