--- a/共享文件夹.md
+++ b/共享文件夹.md
@@ -1,4 +1,3 @@
-
 ## 文件
 
 - [[default.yaml]]
@@ -19,20 +18,21 @@
 > 重新安装输入方案，列表依赖`schema.yaml`文件，
 重新部署，命令行`WeaselDeployer.exe /deploy`
 ### WeaselServer.exe
-服务，重新运行后才能删除`%TEMP%`下的文件
+算法服务，重新运行后才能删除`%TEMP%`下的文件
 
 ### rime.dll
-更新访问 [librime-lua](https://github.com/shewer/librime-lua/releases)
+- [下载更新](https://github.com/rime/librime/releases)
+- 覆盖文件：先停止服务（右键托盘图标），之后双击[[#WeaselServer.exe]]
 ## 目录
 ### preview
 皮肤
 
 ### opencc
-滤镜组件
+[[滤镜]]
 
 ## temp
 `rime.weasel.xxx.log.ERROR`
 
 `E1112 16:02:48.409070 35312 deployment_tasks.cc:667] boost::filesystem::remove: 另一个程序正在使用此文件，进程无法访问。: "C:\Users\ADMINI~1\AppData\Local\Temp\rime.weasel.HUANGYE.Administrator.log.ERROR.20221103-085647.10560"
 `
-- [ ] 文件无法删除，怎么处理
+- 文件无法删除，则先双击[[#WeaselServer.exe]]
