--- a/用户文件夹.md
+++ b/用户文件夹.md
@@ -4,16 +4,25 @@
 #### Android: `存储卡/rime`
 
 ### build
-编译后的`最终版`，重新部署就会重新生成这里的文件，是最终配置
-有些输入方案没有自己的词库，所以可能只生成`prism.bin`文件，
+- 编译后的`最终版`，重新部署就会重新生成这里的文件，是最终配置
+- 各文件的编译必定是依据[[hy.schema.yaml#schema_id|schema_id]]的主翻译器和 speller 进行的。
+> 有些输入方案没有自己的词库，所以可能只生成`prism.bin`文件，
 > 比如`luna_pinyin_simp`，只会生成`luna_pinyin_simp.prism.bin`文件，其他都借用`luna_pinyin`的
 - [ ] 编译后的文件如何使用？提速原理？
 #### hy.prism.bin
 棱镜文件，音节拼写至词典编码的映射
+1. 生成：主要规则由[[speller#algebra]]指定
+2. 作用：由[[translator]]调用
+
+
 #### hy.table.bin
-固态字典，如果文件不存在，反查时又报错，怎么处理？
+[[translator#dictionary]]指定的名称
+- [ ] 固态字典，如果文件不存在，反查时又报错，怎么处理？
+
 #### hy.reverse.bin
 > 反查字典，只要在[[hy.schema.yaml#dependencies]]定义就会生成
+✅✅✅想要在备注显示内容，只能依赖此文件，[[#hy.table.bin]]不支持。
+- [ ] 想要实现中英互查，就需要根据一个词典生成两份[[#hy.reverse.bin]]文件，可否实现
 
 ### wubi86.userdb
 用户输入习惯
