--- a/候选框.md
+++ b/候选框.md
@@ -16,10 +16,10 @@
 3. 定义 [[translators#table_translator]]转成候选项
 4. 如果要提示码，把 `tag` 添加到对应[[reverse_lookup_filter]]的 `tags` 下
 
-## 提示码
-> ✅✅✅这是rime很核心的特性，目前反查用在这个功能应该是副产品，期待开发专门实现此功能的组件
+## 提示码 
+> ✅✅✅这是rime很核心的特性
 > 如果每个字都要处理用[[滤镜]]，完整匹配用[[反查]]，期待出新方式
-
+- [在*.dict.yaml文件中添加comment列 · Issue #538 · rime/librime](https://github.com/rime/librime/issues/538)
 ### 上屏
 1. windows可以`ctrl-shift+enter`上屏
 2. 同文：`{click: Return, long_click: CommitComment}`
