--- a/共享文件夹.md
+++ b/共享文件夹.md
@@ -19,7 +19,7 @@
 重新部署，命令行`WeaselDeployer.exe /deploy`
 ### WeaselServer.exe
 算法服务，重新运行后才能删除`%TEMP%`下的文件
-
+查看`INFO`文件，以`E`开头的内容，就是错误信息
 ### rime.dll
 - [下载更新](https://github.com/rime/librime/releases)
 - 覆盖文件：先停止服务（右键托盘图标），之后双击[[#WeaselServer.exe]]
