--- a/滤镜.md
+++ b/滤镜.md
@@ -2,7 +2,6 @@
 aliases: opencc, simplifier
 ---
 - [Rime_description#opencc](https://github.com/LEOYoon-Tsaw/Rime_collections/blob/master/Rime_description.md#五simplifier)
-- [在*.dict.yaml文件中添加comment列 · Issue #538 · rime/librime](https://github.com/rime/librime/issues/538)
 - [简繁转换OpenCC](https://github.com/BYVoid/OpenCC)
     - `python` 对应的是 `opencc-python-reimplemented`
 [[translator#comment_format]]
@@ -75,7 +74,7 @@ ocd→txt: `opencc_dict.exe -i in.ocd -o out.txt -f ocd -t text`
 ### option_name
 和 [[switches#name]] 一致
 ### opencc_config
-- [ ] 全匹配才替换
+- 全匹配才替换，需要转用[[反查]]
 `opencc_config: s2t.json`
 `opencc_config: s2tw.json`
 ### tags
@@ -91,8 +90,8 @@ ocd→txt: `opencc_dict.exe -i in.ocd -o out.txt -f ocd -t text`
 
 ### tips
 是否显示转换前的字
-- [ ] 和 [[#show_in_comment]] 的关联？
-`tips: all` ，可填`none`(默认)、`char`(仅单字)、`all`
+如果显示，优先级会比较高，比如有中英翻译，翻译会被覆盖，效果：`爲 〔为〕`
+`tips: all|char|none(默认)`
 ### excluded_types
 取消特定范围〔一般为❌`reverse_lookup_translator`〕转化用字
 
