--- a/用户文件夹.md
+++ b/用户文件夹.md
@@ -6,9 +6,13 @@
 ### build
 - 编译后的`最终版`，重新部署就会重新生成这里的文件，是最终配置
 - 各文件的编译必定是依据[[hy.schema.yaml#schema_id|schema_id]]的主翻译器和 speller 进行的。
-> 有些输入方案没有自己的词库，所以可能只生成`prism.bin`文件，
-> 比如`luna_pinyin_simp`，只会生成`luna_pinyin_simp.prism.bin`文件，其他都借用`luna_pinyin`的
+- 有些输入方案没有自己的词库，所以可能只生成`prism.bin`文件，
+- 比如`luna_pinyin_simp`，只会生成`luna_pinyin_simp.prism.bin`文件，其他都借用`luna_pinyin`的
 - [ ] 编译后的文件如何使用？提速原理？
+删除没用的文件
+1. 临时输入方案，则删除`*.reverse.bin` 和 `*.schema.yaml`
+2. 只用来反查提示用的，则删除`*.schema.yaml` `*.prism.bin` `*.table.bin`
+
 #### hy.prism.bin
 棱镜文件，音节拼写至词典编码的映射
 1. 生成：主要规则由[[speller#algebra]]指定
@@ -17,7 +21,7 @@
 
 #### hy.table.bin
 [[translator#dictionary]]指定的名称
-- [ ] 固态字典，如果文件不存在，反查时又报错，怎么处理？
+- 固态字典
 
 #### hy.reverse.bin
 > 反查字典，只要在[[hy.schema.yaml#dependencies]]定义就会生成
