--- a/反查.md
+++ b/反查.md
@@ -1,9 +1,10 @@
+主要是显示在[[候选框#提示码]]区域
+> 目前反查用在提示功能应该是副产品，期待开发专门实现此功能的组件
 > 反查可以分两步走：
 > 1. 使用 recognizer 临时使用其他输入方案输出内容
 > 2. 在候选项添加comment
 > 反查可能会有`简繁体`转换问题，更推荐把词库直接转成自己用的简体或繁体，这样使用过程中就永久少一个转换环节。偶尔的转换，用[[switches]]实现即可
-- [ ] 有什么方法只需要建一个输入方案就能正查、反查两个功能。
-日常打中文，希望显示英文提示，那么需要一个反查的输入方案，  
+日常打中文，希望显示英文提示，需要一个[[用户文件夹#hy.reverse.bin]]
 输入临时英文，希望显示中文提示，那么反查的输入方案词库则相反，  
 为此我必须要建两个输入方案吗？本质上是一个输入方案的正查和反查，
 [linux 拼音输出繁体_解决rime仓颉拼音反查为繁体的问题 - 腾讯云开发者社区-腾讯云](https://cloud.tencent.com/developer/article/2106365)
@@ -14,9 +15,9 @@
 
 ## reverse_lookup_filter
 ✅✅✅新反查滤镜，以更灵活的方式反查，`rime1.0`后替代 `reverse_lookup_translator`
-> 对于 [[tag]]=`punct`时无效，建议有备注需求的还是放到`abc`里，即词库
+> 对于 [[tag]]=`punct`时无效，建议有备注需求的还是放到词库里，并定义成其他`tag`
+❌对比[[滤镜#simplifier选项]]，但没有 `option_name`、`show_in_comment`、`tips` 选项，那如何切换开关？？
 
-参考[[滤镜#simplifier选项]]，但没有 `option_name`、`show_in_comment`、`tips` 选项，那如何切换开关？？
 [reverse_lookup_filter](https://github.com/LEOYoon-Tsaw/Rime_collections/blob/master/Rime_description.md#四reverse_lookup_filter)
 [reverse_lookup_translator 如何转成 reverse_lookup_filter](https://github.com/rime/librime/issues/581)
 > 此属性虽定义在[[translators]]，本质上属于[[filters]]
